src/main/java/nextflow/config/parser/ConfigParser.java
// Generated from ConfigParser.g4 by ANTLR 4.9.2

package nextflow.config.parser;

import nextflow.script.parser.AbstractParser;
import org.apache.groovy.parser.antlr4.GroovySyntaxError;

import static nextflow.script.parser.SemanticPredicates.*;

import org.antlr.v4.runtime.atn.*;
import org.antlr.v4.runtime.dfa.DFA;
import org.antlr.v4.runtime.*;
import org.antlr.v4.runtime.misc.*;
import org.antlr.v4.runtime.tree.*;
import java.util.List;
import java.util.Iterator;
import java.util.ArrayList;

@SuppressWarnings({"all", "warnings", "unchecked", "unused", "cast"})
public class ConfigParser extends AbstractParser {
	static { RuntimeMetaData.checkVersion("4.9.2", RuntimeMetaData.VERSION); }

	protected static final DFA[] _decisionToDFA;
	protected static final PredictionContextCache _sharedContextCache =
		new PredictionContextCache();
	public static final int
		StringLiteral=1, GStringBegin=2, TdqGStringBegin=3, GStringEnd=4, GStringPath=5, 
		GStringText=6, GStringExprStart=7, TdqGStringEnd=8, TdqGStringPath=9, 
		TdqGStringText=10, TdqGStringExprStart=11, AS=12, DEF=13, IN=14, BuiltInPrimitiveType=15, 
		ASSERT=16, CATCH=17, ELSE=18, IF=19, INSTANCEOF=20, NEW=21, RETURN=22, 
		THROW=23, TRY=24, INCLUDE_CONFIG=25, IntegerLiteral=26, FloatingPointLiteral=27, 
		BooleanLiteral=28, NullLiteral=29, RANGE_INCLUSIVE=30, RANGE_EXCLUSIVE_RIGHT=31, 
		SPREAD_DOT=32, SAFE_DOT=33, ELVIS=34, REGEX_FIND=35, REGEX_MATCH=36, POWER=37, 
		SPACESHIP=38, ARROW=39, NOT_INSTANCEOF=40, NOT_IN=41, LPAREN=42, RPAREN=43, 
		LBRACE=44, RBRACE=45, LBRACK=46, RBRACK=47, SEMI=48, COMMA=49, DOT=50, 
		ASSIGN=51, GT=52, LT=53, NOT=54, BITNOT=55, QUESTION=56, COLON=57, EQUAL=58, 
		LE=59, GE=60, NOTEQUAL=61, AND=62, OR=63, ADD=64, SUB=65, MUL=66, DIV=67, 
		BITAND=68, BITOR=69, XOR=70, MOD=71, ADD_ASSIGN=72, SUB_ASSIGN=73, MUL_ASSIGN=74, 
		DIV_ASSIGN=75, AND_ASSIGN=76, OR_ASSIGN=77, XOR_ASSIGN=78, MOD_ASSIGN=79, 
		LSHIFT_ASSIGN=80, RSHIFT_ASSIGN=81, URSHIFT_ASSIGN=82, ELVIS_ASSIGN=83, 
		POWER_ASSIGN=84, CapitalizedIdentifier=85, Identifier=86, WS=87, NL=88, 
		UNEXPECTED_CHAR=89;
	public static final int
		RULE_compilationUnit = 0, RULE_configStatement = 1, RULE_configInclude = 2, 
		RULE_configAssignment = 3, RULE_configAssignmentPath = 4, RULE_configPrimary = 5, 
		RULE_configBlock = 6, RULE_configBlockStatement = 7, RULE_configSelector = 8, 
		RULE_configAppendBlock = 9, RULE_configAppendBlockStatement = 10, RULE_configIncomplete = 11, 
		RULE_invalidStatement = 12, RULE_statement = 13, RULE_ifElseStatement = 14, 
		RULE_statementOrBlock = 15, RULE_blockStatements = 16, RULE_tryCatchStatement = 17, 
		RULE_catchClause = 18, RULE_catchTypes = 19, RULE_assertStatement = 20, 
		RULE_variableDeclaration = 21, RULE_variableNames = 22, RULE_multipleAssignmentStatement = 23, 
		RULE_assignmentStatement = 24, RULE_expressionStatement = 25, RULE_expression = 26, 
		RULE_primary = 27, RULE_pathElement = 28, RULE_namedProperty = 29, RULE_indexPropertyArgs = 30, 
		RULE_identifier = 31, RULE_literal = 32, RULE_stringLiteral = 33, RULE_gstring = 34, 
		RULE_gstringDqPart = 35, RULE_gstringTdqPart = 36, RULE_creator = 37, 
		RULE_createdName = 38, RULE_parExpression = 39, RULE_closure = 40, RULE_formalParameterList = 41, 
		RULE_formalParameter = 42, RULE_closureWithLabels = 43, RULE_blockStatementsWithLabels = 44, 
		RULE_statementOrLabeled = 45, RULE_list = 46, RULE_expressionList = 47, 
		RULE_map = 48, RULE_mapEntryList = 49, RULE_mapEntry = 50, RULE_mapEntryLabel = 51, 
		RULE_builtInType = 52, RULE_arguments = 53, RULE_argumentList = 54, RULE_argumentListElement = 55, 
		RULE_namedArg = 56, RULE_type = 57, RULE_primitiveType = 58, RULE_qualifiedClassName = 59, 
		RULE_qualifiedNameElements = 60, RULE_qualifiedNameElement = 61, RULE_className = 62, 
		RULE_typeArguments = 63, RULE_legacyType = 64, RULE_keywords = 65, RULE_rparen = 66, 
		RULE_nls = 67, RULE_sep = 68;
	private static String[] makeRuleNames() {
		return new String[] {
			"compilationUnit", "configStatement", "configInclude", "configAssignment", 
			"configAssignmentPath", "configPrimary", "configBlock", "configBlockStatement", 
			"configSelector", "configAppendBlock", "configAppendBlockStatement", 
			"configIncomplete", "invalidStatement", "statement", "ifElseStatement", 
			"statementOrBlock", "blockStatements", "tryCatchStatement", "catchClause", 
			"catchTypes", "assertStatement", "variableDeclaration", "variableNames", 
			"multipleAssignmentStatement", "assignmentStatement", "expressionStatement", 
			"expression", "primary", "pathElement", "namedProperty", "indexPropertyArgs", 
			"identifier", "literal", "stringLiteral", "gstring", "gstringDqPart", 
			"gstringTdqPart", "creator", "createdName", "parExpression", "closure", 
			"formalParameterList", "formalParameter", "closureWithLabels", "blockStatementsWithLabels", 
			"statementOrLabeled", "list", "expressionList", "map", "mapEntryList", 
			"mapEntry", "mapEntryLabel", "builtInType", "arguments", "argumentList", 
			"argumentListElement", "namedArg", "type", "primitiveType", "qualifiedClassName", 
			"qualifiedNameElements", "qualifiedNameElement", "className", "typeArguments", 
			"legacyType", "keywords", "rparen", "nls", "sep"
		};
	}
	public static final String[] ruleNames = makeRuleNames();

	private static String[] makeLiteralNames() {
		return new String[] {
			null, null, null, null, null, null, null, null, null, null, null, null, 
			"'as'", "'def'", "'in'", null, "'assert'", "'catch'", "'else'", "'if'", 
			"'instanceof'", "'new'", "'return'", "'throw'", "'try'", "'includeConfig'", 
			null, null, null, "'null'", "'..'", "'..<'", "'*.'", "'?.'", "'?:'", 
			"'=~'", "'==~'", "'**'", "'<=>'", "'->'", "'!instanceof'", "'!in'", "'('", 
			"')'", "'{'", "'}'", "'['", "']'", "';'", "','", null, "'='", "'>'", 
			"'<'", "'!'", "'~'", "'?'", "':'", "'=='", "'<='", "'>='", "'!='", "'&&'", 
			"'||'", "'+'", "'-'", "'*'", null, "'&'", "'|'", "'^'", "'%'", "'+='", 
			"'-='", "'*='", "'/='", "'&='", "'|='", "'^='", "'%='", "'<<='", "'>>='", 
			"'>>>='", "'?='", "'**='"
		};
	}
	private static final String[] _LITERAL_NAMES = makeLiteralNames();
	private static String[] makeSymbolicNames() {
		return new String[] {
			null, "StringLiteral", "GStringBegin", "TdqGStringBegin", "GStringEnd", 
			"GStringPath", "GStringText", "GStringExprStart", "TdqGStringEnd", "TdqGStringPath", 
			"TdqGStringText", "TdqGStringExprStart", "AS", "DEF", "IN", "BuiltInPrimitiveType", 
			"ASSERT", "CATCH", "ELSE", "IF", "INSTANCEOF", "NEW", "RETURN", "THROW", 
			"TRY", "INCLUDE_CONFIG", "IntegerLiteral", "FloatingPointLiteral", "BooleanLiteral", 
			"NullLiteral", "RANGE_INCLUSIVE", "RANGE_EXCLUSIVE_RIGHT", "SPREAD_DOT", 
			"SAFE_DOT", "ELVIS", "REGEX_FIND", "REGEX_MATCH", "POWER", "SPACESHIP", 
			"ARROW", "NOT_INSTANCEOF", "NOT_IN", "LPAREN", "RPAREN", "LBRACE", "RBRACE", 
			"LBRACK", "RBRACK", "SEMI", "COMMA", "DOT", "ASSIGN", "GT", "LT", "NOT", 
			"BITNOT", "QUESTION", "COLON", "EQUAL", "LE", "GE", "NOTEQUAL", "AND", 
			"OR", "ADD", "SUB", "MUL", "DIV", "BITAND", "BITOR", "XOR", "MOD", "ADD_ASSIGN", 
			"SUB_ASSIGN", "MUL_ASSIGN", "DIV_ASSIGN", "AND_ASSIGN", "OR_ASSIGN", 
			"XOR_ASSIGN", "MOD_ASSIGN", "LSHIFT_ASSIGN", "RSHIFT_ASSIGN", "URSHIFT_ASSIGN", 
			"ELVIS_ASSIGN", "POWER_ASSIGN", "CapitalizedIdentifier", "Identifier", 
			"WS", "NL", "UNEXPECTED_CHAR"
		};
	}
	private static final String[] _SYMBOLIC_NAMES = makeSymbolicNames();
	public static final Vocabulary VOCABULARY = new VocabularyImpl(_LITERAL_NAMES, _SYMBOLIC_NAMES);

	/**
	 * @deprecated Use {@link #VOCABULARY} instead.
	 */
	@Deprecated
	public static final String[] tokenNames;
	static {
		tokenNames = new String[_SYMBOLIC_NAMES.length];
		for (int i = 0; i < tokenNames.length; i++) {
			tokenNames[i] = VOCABULARY.getLiteralName(i);
			if (tokenNames[i] == null) {
				tokenNames[i] = VOCABULARY.getSymbolicName(i);
			}

			if (tokenNames[i] == null) {
				tokenNames[i] = "<INVALID>";
			}
		}
	}

	@Override
	@Deprecated
	public String[] getTokenNames() {
		return tokenNames;
	}

	@Override

	public Vocabulary getVocabulary() {
		return VOCABULARY;
	}

	@Override
	public String getGrammarFileName() { return "ConfigParser.g4"; }

	@Override
	public String[] getRuleNames() { return ruleNames; }

	@Override
	public String getSerializedATN() { return _serializedATN; }

	@Override
	public ATN getATN() { return _ATN; }



	    @Override
	    public int getSyntaxErrorSource() {
	        return GroovySyntaxError.PARSER;
	    }

	    @Override
	    public int getErrorLine() {
	        Token token = _input.LT(-1);

	        if (null == token) {
	            return -1;
	        }

	        return token.getLine();
	    }

	    @Override
	    public int getErrorColumn() {
	        Token token = _input.LT(-1);

	        if (null == token) {
	            return -1;
	        }

	        return token.getCharPositionInLine() + 1 + token.getText().length();
	    }

	public ConfigParser(TokenStream input) {
		super(input);
		_interp = new ParserATNSimulator(this,_ATN,_decisionToDFA,_sharedContextCache);
	}

	public static class CompilationUnitContext extends ParserRuleContext {
		public NlsContext nls() {
			return getRuleContext(NlsContext.class,0);
		}
		public TerminalNode EOF() { return getToken(ConfigParser.EOF, 0); }
		public List<ConfigStatementContext> configStatement() {
			return getRuleContexts(ConfigStatementContext.class);
		}
		public ConfigStatementContext configStatement(int i) {
			return getRuleContext(ConfigStatementContext.class,i);
		}
		public List<SepContext> sep() {
			return getRuleContexts(SepContext.class);
		}
		public SepContext sep(int i) {
			return getRuleContext(SepContext.class,i);
		}
		public CompilationUnitContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_compilationUnit; }
	}

	public final CompilationUnitContext compilationUnit() throws RecognitionException {
		CompilationUnitContext _localctx = new CompilationUnitContext(_ctx, getState());
		enterRule(_localctx, 0, RULE_compilationUnit);
		int _la;
		try {
			int _alt;
			enterOuterAlt(_localctx, 1);
			{
			setState(138);
			nls();
			setState(151);
			_errHandler.sync(this);
			_la = _input.LA(1);
			if ((((_la) & ~0x3f) == 0 && ((1L << _la) & ((1L << StringLiteral) | (1L << AS) | (1L << DEF) | (1L << IN) | (1L << BuiltInPrimitiveType) | (1L << IF) | (1L << TRY) | (1L << INCLUDE_CONFIG))) != 0) || _la==CapitalizedIdentifier || _la==Identifier) {
				{
				setState(139);
				configStatement();
				setState(145);
				_errHandler.sync(this);
				_alt = getInterpreter().adaptivePredict(_input,0,_ctx);
				while ( _alt!=2 && _alt!=org.antlr.v4.runtime.atn.ATN.INVALID_ALT_NUMBER ) {
					if ( _alt==1 ) {
						{
						{
						setState(140);
						sep();
						setState(141);
						configStatement();
						}
						} 
					}
					setState(147);
					_errHandler.sync(this);
					_alt = getInterpreter().adaptivePredict(_input,0,_ctx);
				}
				setState(149);
				_errHandler.sync(this);
				_la = _input.LA(1);
				if (_la==SEMI || _la==NL) {
					{
					setState(148);
					sep();
					}
				}

				}
			}

			setState(153);
			match(EOF);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class ConfigStatementContext extends ParserRuleContext {
		public ConfigStatementContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_configStatement; }
	 
		public ConfigStatementContext() { }
		public void copyFrom(ConfigStatementContext ctx) {
			super.copyFrom(ctx);
		}
	}
	public static class ConfigIncludeStmtAltContext extends ConfigStatementContext {
		public ConfigIncludeContext configInclude() {
			return getRuleContext(ConfigIncludeContext.class,0);
		}
		public ConfigIncludeStmtAltContext(ConfigStatementContext ctx) { copyFrom(ctx); }
	}
	public static class ConfigIncompleteStmtAltContext extends ConfigStatementContext {
		public ConfigIncompleteContext configIncomplete() {
			return getRuleContext(ConfigIncompleteContext.class,0);
		}
		public ConfigIncompleteStmtAltContext(ConfigStatementContext ctx) { copyFrom(ctx); }
	}
	public static class ConfigAssignmentStmtAltContext extends ConfigStatementContext {
		public ConfigAssignmentContext configAssignment() {
			return getRuleContext(ConfigAssignmentContext.class,0);
		}
		public ConfigAssignmentStmtAltContext(ConfigStatementContext ctx) { copyFrom(ctx); }
	}
	public static class ConfigInvalidStmtAltContext extends ConfigStatementContext {
		public InvalidStatementContext invalidStatement() {
			return getRuleContext(InvalidStatementContext.class,0);
		}
		public ConfigInvalidStmtAltContext(ConfigStatementContext ctx) { copyFrom(ctx); }
	}
	public static class ConfigBlockStmtAltContext extends ConfigStatementContext {
		public ConfigBlockContext configBlock() {
			return getRuleContext(ConfigBlockContext.class,0);
		}
		public ConfigBlockStmtAltContext(ConfigStatementContext ctx) { copyFrom(ctx); }
	}
	public static class ConfigAppendBlockStmtAltContext extends ConfigStatementContext {
		public ConfigAppendBlockContext configAppendBlock() {
			return getRuleContext(ConfigAppendBlockContext.class,0);
		}
		public ConfigAppendBlockStmtAltContext(ConfigStatementContext ctx) { copyFrom(ctx); }
	}

	public final ConfigStatementContext configStatement() throws RecognitionException {
		ConfigStatementContext _localctx = new ConfigStatementContext(_ctx, getState());
		enterRule(_localctx, 2, RULE_configStatement);
		try {
			setState(161);
			_errHandler.sync(this);
			switch ( getInterpreter().adaptivePredict(_input,3,_ctx) ) {
			case 1:
				_localctx = new ConfigIncludeStmtAltContext(_localctx);
				enterOuterAlt(_localctx, 1);
				{
				setState(155);
				configInclude();
				}
				break;
			case 2:
				_localctx = new ConfigAssignmentStmtAltContext(_localctx);
				enterOuterAlt(_localctx, 2);
				{
				setState(156);
				configAssignment();
				}
				break;
			case 3:
				_localctx = new ConfigBlockStmtAltContext(_localctx);
				enterOuterAlt(_localctx, 3);
				{
				setState(157);
				configBlock();
				}
				break;
			case 4:
				_localctx = new ConfigAppendBlockStmtAltContext(_localctx);
				enterOuterAlt(_localctx, 4);
				{
				setState(158);
				configAppendBlock();
				}
				break;
			case 5:
				_localctx = new ConfigIncompleteStmtAltContext(_localctx);
				enterOuterAlt(_localctx, 5);
				{
				setState(159);
				configIncomplete();
				}
				break;
			case 6:
				_localctx = new ConfigInvalidStmtAltContext(_localctx);
				enterOuterAlt(_localctx, 6);
				{
				setState(160);
				invalidStatement();
				}
				break;
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class ConfigIncludeContext extends ParserRuleContext {
		public TerminalNode INCLUDE_CONFIG() { return getToken(ConfigParser.INCLUDE_CONFIG, 0); }
		public ExpressionContext expression() {
			return getRuleContext(ExpressionContext.class,0);
		}
		public ConfigIncludeContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_configInclude; }
	}

	public final ConfigIncludeContext configInclude() throws RecognitionException {
		ConfigIncludeContext _localctx = new ConfigIncludeContext(_ctx, getState());
		enterRule(_localctx, 4, RULE_configInclude);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(163);
			match(INCLUDE_CONFIG);
			setState(164);
			expression(0);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class ConfigAssignmentContext extends ParserRuleContext {
		public ConfigAssignmentPathContext configAssignmentPath() {
			return getRuleContext(ConfigAssignmentPathContext.class,0);
		}
		public List<NlsContext> nls() {
			return getRuleContexts(NlsContext.class);
		}
		public NlsContext nls(int i) {
			return getRuleContext(NlsContext.class,i);
		}
		public TerminalNode ASSIGN() { return getToken(ConfigParser.ASSIGN, 0); }
		public ExpressionContext expression() {
			return getRuleContext(ExpressionContext.class,0);
		}
		public ConfigAssignmentContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_configAssignment; }
	}

	public final ConfigAssignmentContext configAssignment() throws RecognitionException {
		ConfigAssignmentContext _localctx = new ConfigAssignmentContext(_ctx, getState());
		enterRule(_localctx, 6, RULE_configAssignment);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(166);
			configAssignmentPath();
			setState(167);
			nls();
			setState(168);
			match(ASSIGN);
			setState(169);
			nls();
			setState(170);
			expression(0);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}
